k8s/beszel/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel
  labels:
    app: beszel
spec:
  type: ClusterIP
  selector:
    app: beszel
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
      name: http
